fix slight shift when checking and unchecking boxes by removing transition property

--- a/css/styles.css
+++ b/css/styles.css
@@ -356,11 +356,10 @@ textarea {
 [type="checkbox"]:checked + label:after {
   content: '';
   position: absolute;
-  top: 2px;
-  left: 2px;
-  width: 1.2rem;
-  height: 1.2rem;
-  transition: all .2s; }
+  top: 1px;
+  left: 1px;
+  width: 1.3rem;
+  height: 1.3rem; }
 
 .checkbox-light [type="checkbox"]:not(:checked) + label:after,
 .checkbox-light [type="checkbox"]:checked + label:after {
@@ -372,17 +371,11 @@ textarea {
 
 /* checked mark aspect changes */
 [type="checkbox"]:not(:checked) + label:after {
-  opacity: 0;
-  transform: scale(0); }
-
-[type="checkbox"]:checked + label:after {
-  opacity: 1;
-  transform: scale(1); }
+  opacity: 0; }
 
 /* disabled checkbox */
 [type="checkbox"]:disabled:not(:checked) + label:before,
 [type="checkbox"]:disabled:checked + label:before {
-  box-shadow: none;
   border-color: #9B9B9B;
   background-color: #9B9B9B; }
 
