--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -170,10 +170,9 @@ textarea {
 [type="checkbox"]:checked + label:after {
   content: '';
   position: absolute;
-  top: 2px; left: 2px;
-  width: 1.2rem;
-  height: 1.2rem;
-  transition: all .2s;
+  top: 1px; left: 1px;
+  width: 1.3rem;
+  height: 1.3rem;
 }
 .checkbox-light [type="checkbox"]:not(:checked) + label:after,
 .checkbox-light [type="checkbox"]:checked + label:after {
@@ -183,19 +182,16 @@ textarea {
 .checkbox-dark [type="checkbox"]:checked + label:after {
   background: $dark;
 }
+
 /* checked mark aspect changes */
 [type="checkbox"]:not(:checked) + label:after {
   opacity: 0;
-  transform: scale(0);
 }
-[type="checkbox"]:checked + label:after {
-  opacity: 1;
-  transform: scale(1);
-}
+
+
 /* disabled checkbox */
 [type="checkbox"]:disabled:not(:checked) + label:before,
 [type="checkbox"]:disabled:checked + label:before {
-  box-shadow: none;
   border-color: $md-grey;
   background-color: $md-grey;
 }
